@startuml

title __MODEL's Class Diagram__\n

  package system.model {
    enum QuizGroupType {
      CAT
      SUBCAT
      SUBSUBCAT
    }
  }
  

  package system.model {
    class Result {
        - id : String
        - teacher : String
        - players : LinkedList<String>
        - realPlayers : LinkedList<Player>
        - questionsForPlayers : LinkedList<ListOfRealQuestions>
        - playersAnswers : LinkedList<PlayerAnswers>
        - playersPoints : LinkedList<PlayerPoints>
        - playersPointSums : LinkedList<Double>
        + Result()
        + Result()
        + Result()
        + Result()
        + getId()
        + setId()
        + getRealQuiz()
        + setRealQuiz()
        + getRealGame()
        + setRealGame()
        + getTeacher()
        + setTeacher()
        + getPlayers()
        + setPlayers()
        + getRealPlayers()
        + setRealPlayers()
        + getQuestionsForPlayers()
        + setQuestionsForPlayers()
        + getPlayersAnswers()
        + setPlayersAnswers()
        + getPlayersPoints()
        + setPlayersPoints()
        + getPlayersPointSums()
        + setPlayersPointSums()
    }
  }
  

  Result -up-|> Idable
  Result -up-|> Serializable
  Result o-- Quiz : realQuiz
  Result o-- Game : realGame


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
